2006-12-29  Dr. Bernhard Pfaff <bernhard@pfaffikus.de>

	* R/internal.R: .jb.multi: rep(3, K) instead of rep(3, 4).
	
2006-12-06  Dr. Bernhard Pfaff <bernhard@pfaffikus.de>

	* man/SVAR.Rd: Typo fixed in \value{} section.
	* R/SVAR.R (svarest): Inserted list object LRIM = NULL
	                      (used by Blanchard-Quah function BQ). 
	* man/SVAR.Rd: Inserted description of list element LRIM.
	* R/BQ.R: New function for Blanchard-Quah type SVAR.
	* man/BQ.Rd: Documentation for BQ() created.
	* R/print.svarest.R: Adjusted the print-method for Blanchard-Quah. 
	* NAMESPACE: Inserted BQ
	* R/SVAR.R (sigma): Used degrees of freedom instead of obs.
	
2006-11-02  Dr. Bernhard Pfaff  <bernhard@pfaffikus.de>

	* R/roots.R: If-clause inserted for checking p > 1

2006-09-13  Dr. Bernhard Pfaff  <bernhard@pfaffikus.de>

	* inst/doc/vars.Rnw: Vignette created.

	* DESCRIPTION (Package): Suggests field added (xtable) for
	vignette processing.
	
	* R/predict.varest.R: List element model added to 'result' for
	fanchart function.
	
2006-08-31  Dr. Bernhard Pfaff  <bernhard@pfaffikus.de>

	* R/fanchart.R: Function for fan chart added (needs object of
	class 'varprd').

	* man/fanchart.Rd: Help file for function 'fanchart()' added.

	* NAMESPACE: Entry for function 'fanchart()' added.

2006-08-29  Dr. Bernhard Pfaff  <bernhard@pfaffikus.de>

	* R/plot.varcheck.R: xlab = "" argument inserted in hist(). 

2006-08-27  Dr. Bernhard Pfaff  <bernhard@pfaffikus>

	* man/roots.Rd: Rd-file for new function 'roots' added.

	* R/roots.R: Function for calculating eigenvalues added.

	* NAMESPACE: Function 'root' added to 'NAMESPACE'.
	
2006-07-27    Dr. Bernhard Pfaff <bernhard@pfaffikus.de>

	* R/SVAR.R: Function added for SVAR estimation (A-, B-, and AB-model); 
	returns a list with class attribute 'svarest'.
	
	* R/Psi.varest.R: Method 'Psi' for 'varest' objects.

	* R/Psi.R: Defined formerly function 'Psi' as S3-method.
