@@ -1,3 +1,8 @@
+2007-03-07  Dr. Bernhard Pfaff <bernhard@pfaffikus.de>
+
+	* R/causality.R ("causality"): Object temp corrected for proper 
+	calculation if p > 2.
+
 2006-12-29  Dr. Bernhard Pfaff <bernhard@pfaffikus.de>
 
 	* R/internal.R: .jb.multi: rep(3, K) instead of rep(3, 4).
